Check Out Shipping alignment issue

--- a/src/Styles/CheckOutShipping.css
+++ b/src/Styles/CheckOutShipping.css
@@ -45,7 +45,7 @@ body {
   
   .shipping-option {
     display: flex;
-    align-items: center;
+    align-items: center; 
     border: 2px solid #000;
     border-radius: 5px;
     padding: 15px;
@@ -53,10 +53,12 @@ body {
     cursor: pointer;
     background-color: #fff;
     height: 100px;
+    padding: 0% !important;
   }
   
   .shipping-option input {
-    margin-right: 10px;
+    margin-right: -450px;
+    margin-left: -450px !important;
   }
   
   .shipping-option label {
