--- a/src/Styles/Favorites.css
+++ b/src/Styles/Favorites.css
@@ -10,6 +10,7 @@
     color: #171717;
     font-size: 50px;
     font-weight: 600;
+    margin-top: 30px;
 }
 
 .favorites-list hr{
